--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
   <link href="styles/stylesheet.css" rel="stylesheet" type="text/css" />
   <title>Week 4 Practice</title>
 </head>
@@ -51,9 +52,17 @@
     </article>
 
     <footer>
-      <i class="fa fa-facebook"></i>
-      <i class="fa fa-github"></i>
-      <i class="fa fa-linkedin"></i>
+      <span class="fa-stack fa-2x">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+      </span>
+      <span class="fa-stack fa-2x">
+        <i class="fa fa-github fa-stack-2x"></i>
+      </span>
+      <span class="fa-stack fa-2x">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+      </span>
     </footer>
   </section>
 </div>
