--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Fromage.com</h1>
     <p>It's the cheesiest site on the Web</p>
   </section>
+  <a href="#main" class="offscreen">Skip to Content</a> 
   <nav>
     <ul>
       <li><a href="#">Home</a></li>
